# multiview-futtracker

./: CMakeLists.txt  LICENSE.txt  README.md
DataBase/: database.sql
Ferramentas/: CMakeLists.txt
Ferramentas/BackgroundModel/: CMakeLists.txt
Ferramentas/BackgroundModel/source/: main.cpp
Ferramentas/CameraMarker/: CMakeLists.txt  resource.qrc
Ferramentas/CameraMarker/forms/: cameramarker.ui
Ferramentas/CameraMarker/include/: calibration_processor.hpp  cameramarker.h  controller.h  data_types.hpp  dialog_world_point.hpp  video_processor.hpp
Ferramentas/CameraMarker/source/: calibration_processor.cpp  cameramarker.cpp  controller.cpp  dialog_world_point.cpp  main.cpp  video_processor.cpp
Ferramentas/GroundTruth/: CMakeLists.txt
Ferramentas/GroundTruth/source/: main.cpp
Ferramentas/TsaiCalibration/: CMakeLists.txt
Ferramentas/TsaiCalibration/source/: main_.c
Ferramentas/extractFrames/: CMakeLists.txt
Ferramentas/vidInfo/: .CMakeLists.txt.un~  .main.cpp.un~  CMakeLists.txt
Ferramentas/vidSync/: CMakeLists.txt  CMakeLists.txt~  main.cpp
Ferramentas/vidSync/source/: VideoSync.cpp
Software/: CMakeLists.txt  alg_config.yml  config.yml  main.cpp
Software/Business/: CMakeLists.txt
Software/Business/include/: appearance_model.hpp  common_data_structures.hpp  data_processor.hpp  file_view.hpp  gaussian_mixture_detector.hpp  ground.hpp  ground_truth_verify.hpp  hidden_markov_chain.hpp  hidden_markov_model.hpp  image_operations.hpp  imagebuffer.hpp  motion_model.hpp  occupation_map.hpp  player.hpp  team.hpp  track.hpp  util.hpp  video_grabber.hpp  video_processor.hpp  video_processor_bgs.hpp  video_processor_bgs_gmm.hpp  video_processor_bgs_selectivity.hpp  video_processor_optical_flow.hpp  view.hpp
Software/Business/source/: appearance_model.cpp  common_data_structures.cpp  data_processor.cpp  file_view.cpp  gaussian_mixture_detector.cpp  ground.cpp  ground_truth_verify.cpp  hidden_markov_chain.cpp  hidden_markov_model.cpp  image_operations.cpp  imagebuffer.cpp  motion_model.cpp  occupation_map.cpp  player.cpp  team.cpp  track.cpp  util.cpp  video_grabber.cpp  video_processor.cpp  video_processor_bgs.cpp  video_processor_bgs_gmm.cpp  video_processor_bgs_selectivity.cpp  video_processor_optical_flow.cpp  view.cpp
Software/Communication/: CMakeLists.txt
Software/Communication/include/: data_base.hpp
Software/Communication/source/: data_base.cpp
Software/Control/: CMakeLists.txt
Software/Control/include/: capture_pool.hpp  multiview_futtracker_controller.hpp  sync_queue.hpp  syncstack.hpp
Software/Control/source/: capture_pool.cpp  multiview_futtracker_controller.cpp  sync_queue.cpp  syncstack.cpp
Software/Persistence/: CMakeLists.txt
Software/Persistence/include/: data_base.hpp
Software/Persistence/source/: data_base.cpp
Software/Tests/: CMakeLists.txt  imageviewer.cpp  imageviewer.hpp  imageviewer.ui  main_video_processor.cpp  main_window_video_player.cpp  main_window_video_player.ui  video_show.hpp
Software/Tests/forms/: main_window_video_player.ui
Software/Tests/include/: main_window_video_player.hpp
Software/Tests/sources/: main_bgs.cpp  main_capture_pool.cpp  main_hist_comp.cpp  main_video_processor.cpp  main_window_video_player.cpp
Software/View/: CMakeLists.txt  resource.qrc
Software/View/forms/: frame_widget.ui  map_widget.ui  multiview_futtracker_mainwindow.ui
Software/View/include/: frame_widget.hpp  map_widget.hpp  multiview_futtracker_mainwindow.hpp
Software/View/source/: frame_widget.cpp  map_widget.cpp  multiview_futtracker_mainwindow.cpp
